kubernetes/unmaintained/snapdrop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapdrop-deployment
  labels:
    app: snapdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapdrop
  template:
    metadata:
      labels:
        app: snapdrop
    spec:
      containers:
        - name: snapdrop
          image: linuxserver/snapdrop
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /config
            name: snapdrop-data
            subPath: config
          imagePullPolicy: IfNotPresent
      volumes:
      - name: snapdrop-data
        persistentVolumeClaim:
          claimName: snapdrop-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: snapdrop-service
  labels:
    app: snapdrop
spec:
  ports:
  - port: 80
    targetPort: 80
    name: tcp
  selector:
    app: snapdrop
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: snapdrop-ingress
  labels:
    app: snapdrop
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: share.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: snapdrop-service
          servicePort: 80
